apps/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        diun.enable: "true"
    spec:
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:release-1.21.2.4649
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
            - name: downloads
              mountPath: /data
      nodeSelector:
          pvpn: "true"
          workload: general
      tolerations:
          - key: "network"
            operator: "Equal"
            value: "pvpn"
            effect: "NoSchedule"
