apps/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: media
spec:
  ports:
  - name: http
    port: 9696
    protocol: TCP
  selector:
    app: prowlarr
  type: ClusterIP
