apps/prowlarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: prowlarr
  namespace: media
spec:
  rules:
  - host: prowlarr.kube.home
    http:
      paths:
      - backend:
          service:
            name: prowlarr-service
            port:
              number: 9696
        path: /
        pathType: Prefix
